yet again ffs, i am trying to fix this spacing.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,6 @@
     padding-top:50px;
 }
 
-#Landing-Splash,
 #Articles,
 #About,
 #Timeline,
@@ -152,7 +151,9 @@
 }
 
 #Landing-Splash{
-    margin-top:30px;
+    margin: 30px 0 50px;
+    padding: 0 30px;
+    overflow: hidden;
 }
 
 #Articles .title,
